--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
         font-family:monospace;
         font-size: 45px;
     }
+    h1:hover{
+        color: blanchedalmond;
+    }
 
     p{
         color:rgb(205, 247, 247); 
@@ -79,7 +82,7 @@
         height: 300px;
         padding: 5px;
         left: 120px;
-        top: 150px;
+        top: 140px;
     }
     #itens{
         border: 2px solid rgb(83, 57, 90);
@@ -91,7 +94,7 @@
         height: 300px;
         padding: 5px;
         left: 400px;
-        top: 150px;
+        top: 140px;
     }
     h3{
         font-family:monospace;
