--- a/style.css
+++ b/style.css
@@ -1,118 +1,58 @@
-    body{
-        margin: 0px;
-        padding: 0px;
-    }
+* {
+  margin: 0px;
+  padding: 0px;
+}
 
-    h1{
-        color: rgb(180, 231, 205); 
-        text-align: center;
-        font-family:monospace;
-        font-size: 45px;
-    }
-    h1:hover{
-        color: blanchedalmond;
-    }
+#imagem {
+  border-radius: 100px;
+  box-shadow: 5px 5px 10px rgb(19, 19, 19);
+  margin-bottom: 20px;
+}
 
-    p{
-        color:rgb(205, 247, 247); 
-        text-align: center;
-        inline-size: 900px;
-        font-size: 20px;
-        margin-top: 50px;
-        font-family:serif;
+#menu {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  padding-top: 15px;
+  align-content: flex-end;
+}
 
-    }
+.navs {
+  margin-right: 20px;
+  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
+  text-decoration: none;
+  font-size: large;
+  color: rgb(196, 255, 235);
+}
 
-    .intro{
-        padding-top: 70px;
-        display: flex;
-        flex-flow: column;
-        align-items: center;
-        background-color: rgb(33, 4, 48);
-        width: 100%;
-        height: 100vh;
-    }
+#content-intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  padding: 90px 90px 90px 90px;
+}
 
-    #menu{
-        position: fixed;
-        top: 5px;
-        left: 5px;
-    }
-    .menu{
-        width: 50px;
-        border-radius: 100px;
-    }
-    #menu:hover{
-        pointer-events: fill;
-        opacity: 50%;
-    }
-    #imagem{
+#intro {
+  width: 100%;
+  height: 100vh;
+}
 
-        border-radius: 100px;
-    }
+h1{
+  color: rgb(196, 255, 235);
+  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
+  margin-top: 20px;
+  font-size:xx-large;
+}
 
-    #linked{
-        border-radius: 10px;
-        width: 100px;
-    }
-    #gith{
-        width: 130px;
-    }
-    #gith:hover{
-        pointer-events: fill;
-    }
-    #linked:hover{
-        pointer-events: fill;
-    }
-    .aboutme{
-        width: 100%;
-        background-color: rgb(150, 202, 175);;
-        height: 100vh;
-        align-items: center;
-    }
-    .content{
-        display:inline-flex;
-    }
-    #links{
-        border: 2px solid rgb(83, 57, 90);
-        border-radius: 20px;
-        background-color: rgba(253, 236, 253, 0.226);
-        position: relative;
-        width: 400px;
-        height: 300px;
-        padding: 5px;
-        left: 120px;
-        top: 140px;
-    }
-    #itens{
-        border: 2px solid rgb(83, 57, 90);
-        border-radius: 20px;
-        background-color: rgba(253, 236, 252, 0.226);
-        position: relative;
-        align-items: center;
-        width: 400px;
-        height: 300px;
-        padding: 5px;
-        left: 400px;
-        top: 140px;
-    }
-    h3{
-        font-family:monospace;
-        color: rgb(46, 16, 59); 
-        text-align: center;
-        font-size: 30px;
-        margin-bottom: 100px;
-    }
-    h2{
-        position: relative;
-        left: 450px;
-        top: 30px;
-        color: rgb(46, 16, 59); 
-        font-size: 50px;
-        padding: 0px;
-        margin-top: 0px;
-        font-family: monospace;
-    }
-
-
-
+#about-me {
+    color: rgb(196, 255, 235);
+    font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
+    inline-size: 900px;
+    text-align: center;
+    font-size: medium;
+    padding-top: 50px;
+    width: 800px;
+}
