--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@
 }
 
 #intro,
-#skills-section {
+#skills-section,
+#contact {
   width: 100%;
   height: 100vh;
 }
@@ -49,6 +50,10 @@ h1 {
     Arial, sans-serif;
   margin-top: 20px;
   font-size: xx-large;
+}
+
+h3 {
+    color: rgb(196, 255, 235);
 }
 
 #about-me {
@@ -66,7 +71,7 @@ h1 {
   width: 120px;
 }
 
-#skills {  
+#skills {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,15 +80,15 @@ h1 {
 }
 
 #skills-section {
-    background-color: rgb(196, 255, 235);
+  background-color: rgb(196, 255, 235);
 }
 
 #title-skills {
-    padding-top: 50px;
+  padding-top: 50px;
   color: rgb(68, 68, 68);
   font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans,
     Arial, sans-serif;
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 #content-skills {
@@ -110,18 +115,60 @@ h1 {
 }
 
 h4 {
-    color: rgb(14, 31, 30);
-    font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans,
+  color: rgb(14, 31, 30);
+  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans,
     Arial, sans-serif;
 }
 
 .navs-skills {
-    margin-right: 20px;
-    font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans,
-      Arial, sans-serif;
-    text-decoration: none;
-    font-size: large;
-    color: rgb(14, 31, 30);
-}.menu-skills {
+  margin-right: 20px;
+  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans,
+    Arial, sans-serif;
+  text-decoration: none;
+  font-size: large;
+  color: rgb(14, 31, 30);
+}
+
+.menu-skills {
   background-color: rgba(238, 255, 249, 0.603);
+}
+
+#content-contact {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+}
+
+#medias {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  padding-top: 40px;
+  padding-bottom: 90px;
+}
+
+.contact-item {
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    margin: 30px;
+    padding: 20px;
+    background-color: rgba(225, 255, 244, 0.644);
+}
+
+.contact-img {
+  width: 90px;
+}
+
+#gmail {
+  text-align: center;
+  color: rgb(196, 255, 235);
+  font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans,
+    Arial, sans-serif;
+  font-size: medium;
 }
