--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ h3 {
   justify-content: space-evenly;
   margin: 10px;
   padding: 20px;
-  background-color: rgb(225, 255, 244);
+  background-color: rgb(235, 255, 252);
   box-shadow: 3px 5px 10px rgb(107, 110, 110);
 }
 
@@ -159,6 +159,7 @@ h4 {
     margin: 30px;
     padding: 20px;
     background-color: rgba(225, 255, 244, 0.644);
+    box-shadow: 3px 3px 10px rgb(17, 17, 17);
 }
 
 .contact-img {
